Fix layout issues; add Course Details button to allow users to enroll in the course.

--- a/courseDetail/courseDetail.css
+++ b/courseDetail/courseDetail.css
@@ -46,19 +46,37 @@
     color: #fff;
 }
 
+.course-details-btn{
+    margin: 0;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.course-details-btn:hover{
+    transform: scale(1.1);
+}
+
 .information{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     position: absolute;
-    top: 90%;
+    top: 88%;
     right:12.5%;
-    height: 80px;
     width: 40%;
     border-radius: 8px;
     background-color: #f5f5f5;
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 1);
+    padding: 0.5rem;
 
+}
+
+.information-items{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
 }
 
 .information-details{
@@ -66,11 +84,31 @@
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
-    transition: transform 0.3s ease;
 }
 
-.information-details:hover{
-    transform: scale(1.1);
+.information-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.information-btn button{
+    padding: 0.5rem;
+    width: 60%;
+    color: #f5f5f5;
+    background-color: #a742ff;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    border-radius: 8px;
+    border: none;
+    font-weight: 700;
+}
+
+.information-btn button:hover{
+   color: #a742ff;
+   background-color: #f5f5f5;
+   border: 2px solid #a742ff;
 }
 
 .information-details p img{
@@ -122,13 +160,13 @@
 @media (max-width: 1200px) {
 
     #course-details-heading{
-        font-size: 3rem;
-
+        font-size: 2.5rem;
     }
 
     .information{
-        width: 48%;
+        width: 50%;
         right: 10%;
+        top: 80%;
     }
 }
 /* *** 992px **** */
@@ -139,21 +177,26 @@
     }
 
     #course-details-heading{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
+
     }
 }
 
  /* *** 769X **** */
 @media (max-width: 769px) {
-
-     .information{
+    
+    
+    .course-details{
+        margin-left: 4rem;  
+    }
+    .information{
         width: 55%;
         right: 7%;
     }
 }
 
- /* *** 640X **** */
-@media (max-width: 640px){
+ /* *** 700X **** */
+@media (max-width:700px){
 
     .courseDetail-main-course-card{
         padding: 2rem;
@@ -170,27 +213,32 @@
     }
 
     .information{
-        align-content: space-between;
+        box-shadow: none;
         top: 125%;
         width: 100%;
         right: 0;
-        height: 65px;
     }
 
     .information-details p{
         font-size: 0.8rem;
         margin: 0;
+    }
 
+    .information-btn{
+        margin-top: 1rem;
     }
 
     #courseDetail-description{
-        margin-top: 7.5rem;
+        margin-top: 9.5rem;
 
     }
 }
 
 /* *** 530X **** */
 @media (max-width: 530px){
+    .information-btn button{
+        width: 100%;
+    }
 
     .courseDetail-main-course-card{
         background: none;
@@ -205,9 +253,9 @@
     }
 
     .course-details{
+        text-align: center;
         width: 100%;
-        margin-top: 3.5rem;
-        margin-left: 0
+        margin: 3.5rem 0 0 0;
     }
 
     #course-details-heading{
@@ -217,10 +265,6 @@
 
     .information{
         top: 106%;
-    }
-
-      #courseDetail-description{
-        margin-top: 6.5rem;
     }
 
     #courseDetail-description li{
